<resources>
    <string name="app_name">Sleep assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_header_welcome_word">devdroid:\nSharing makes technology more perfect.</string>
    <string name="navigation_header_welcome_email">gurecn@gmail.com</string>
    <!--正文增加的提醒-->
    <string name="feedback_content">The following are the system information required to resolve your problem. We will never collect any of your personal information.</string>
    <!--未发现手机上的邮件APP-->
    <string name="activity_setting_feedback_no_email">No Email APP found</string>
    <!--反馈信息页面下拉菜单-->
    <string name="activity_setting_feedback_common">Common Feedback</string>
    <string name="activity_setting_feedback_suggestion">Suggestion I Got</string>
    <string name="activity_setting_feedback_problem">Problem I Found</string>
    <string name="activity_setting_feedback_forceinstall">Forced/Tricked Installation</string>
    <string name="no_contain_setting_feedback">Hi,say something?</string>
    <!--菜单feedback-->
    <string name="container_hint_setting_feedback">Please write your comments here, provide as much detail as you can. We are always listening and improving.</string>
    <string name="notice_setting_feedback">Phone model and version will be collected for diagnosing your issue.We will never collect personal information without your permission.</string>
    <string name="checknet_setting_feedback">Please check your network connection.</string>
    <!--关于界面-->
    <string name="about_rights">\@2014–2024 devdroid Dev Team. All Rights Reserved.</string>
    <string name="about_policy">Privacy Policy</string>
    <!--侧滑菜单-->
    <string name="nav_string_restriction">Force</string>
    <string name="nav_string_share">Share</string>
    <string name="nav_string_blogger">Bolgger</string>
    <string name="nav_string_feedback">FeedBack</string>
    <string name="nav_string_change_icon">Change icon</string>
    <string name="nav_string_layer_grey">layer grey</string>
    <string name="nav_string_receive_process_text">Receive process text</string>
    <string name="nav_string_about">About</string>

    <string name="share_app_text">Here is a very fun application, we can experience.https://play.google.com/store/apps/details?id=com.devdroid.sleepassistant</string>

    <!--日历控件时间-->
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="thesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="nav_string_calendar">Calendar</string>
    <string name="nav_string_chart">Chart</string>

    <string name="gerat">Gerat</string>
    <string name="warn">Warn</string>
    <string name="bad">Bad</string>
    <string name="permissionnot">Permission is not granted, the application may not be able to normal use,open and try again, please</string>
    <string name="ime_setting_backuping">Exporting data</string>
    <string name="ime_setting_restore_success">Import data successfully</string>
    <string name="restore_data_data_bad">Backup data corrupted</string>
    <string name="restore_data_select_error">Please select the backup file</string>
    <string name="cancle">cancle</string>
    <string name="backup_data_import">Data import</string>
    <string name="ime_setting_backup_failed">Export data failed, please try again</string>
    <string name="ime_setting_backup_success">Data has been successfully exported to the phone root directory</string>
    <string name="item_setting_data_export">Export data</string>
    <string name="item_setting_data_import">Import data</string>
    <string name="item_setting_logput">quit</string>
    <string name="menu_item_restriction_add">add</string>
    <string name="menu_item_restriction_quit">Quit</string>

    <string name="applock">Applock</string>
    <string name="action_applock_settings">Applock settings</string>
    <string name="menu_item_applock_submit">Submit</string>
    <string name="menu_item_applock_quit">Quit</string>

    <string name="menu_item_chart_gengral_spline">Gengral spline chart</string>
    <string name="menu_item_chart_spline">Spline chart</string>
    <string name="menu_item_chart_pie">Pie chart</string>
    <string name="menu_item_chart_quit">Quit</string>

    <string name="wait_next_version">For this feature, please wait for the next version</string>
    <string name="activity_agreement_lable">Agreement</string>
    <string name="date_picker_cancel">Cancle</string>
    <string name="date_picker_submit">Submit</string>
    <string name="menu_chart_item_value_date">%1$dyears%2$dmonths</string>
    <string name="menu_item_chart_gengral_date">Date</string>
    <string name="guard_date">Guardian %1$d days</string>
    <string name="date_picker_all_data">Whole</string>
    <string name="shortcut_sleep_time_lable">Sleep now</string>
    <string name="shortcutbackup_lable">Backup data</string>
    <string name="shortcutabout_lable">About</string>
    <string name="shortcuttest_lable">Test</string>

    <string name="dialog_feed_back_content">We need your voice to help us make suggestions and better serve everyone.</string>
    <string name="dialog_feed_back_button_good">Praise</string>
    <string name="dialog_feed_back_button_rant">criticize</string>

    <string name="dialog_lock_time_content">The Force function needs to apply for "Usage information access" permission to judge whether the current app is within the disabled range</string>
    <string name="dialog_lock_time_open_method">Open Method</string>
    <string name="dialog_lock_time_ok">Open now</string>
    <string name="dialog_lock_time_cancel">Not open</string>

    <string name="widget_listening_dur_hour">小时</string>
    <string name="widget_listening_dur_min">分钟</string>
    <string name="widget_listening_dur_tip">在小宇宙共收听</string>
    <string name="widget_player_empty_play_state">剩余时长</string>
    <string name="back_15_second">后退15秒</string>
    <string name="forward_30_second">前进30秒</string>
    <string name="widget_i_sleep">爱睡眠</string>
    <string name="widget_i_shici">爱诗词</string>
    <string name="save_img">保存成图片</string>

    <string name="dialog_set_speech_engine">设置语音引擎</string>
    <string name="local_speech_engine">手机内置引擎</string>
    <string name="tensorflow_speech_engine">TensorFlowTTS引擎</string>


    <string name="action_speech">语音</string>

    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>许久—男青、中英、普通话</item>
        <item>小萍—女青、中英、普通话</item>
        <item>小婧—女青、中英、普通话</item>
        <item>许小宝—男青、中英、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>aisjiuxu</item>
        <item>aisxping</item>
        <item>aisjinger</item>
        <item>aisbabyxu</item>
    </string-array>
</resources>
