<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="vertical"
        android:background="@color/white">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:layout_marginBottom="2dip"
            android:background="@color/white"
            android:paddingTop="2dip" >
            <TableRow
                android:id="@+id/tr_calender_sign_week">
                <TextView
                    style="@style/dateStyle"
                    android:text="@string/sunday"/>
                <TextView
                    style="@style/dateStyle"
                    android:text="@string/monday"/>
                <TextView
                    style="@style/dateStyle"
                    android:text="@string/thesday"/>
                <TextView
                    style="@style/dateStyle"
                    android:text="@string/wednesday"/>
                <TextView
                    style="@style/dateStyle"
                    android:text="@string/thursday"/>
                <TextView
                    style="@style/dateStyle"
                    android:text="@string/friday"/>
                <TextView
                    style="@style/dateStyle"
                    android:text="@string/saturday"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
    </android.support.v4.view.ViewPager>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff0000"
        android:text="这是测试"
        android:textColor="@color/about_bg_darker"/>
</LinearLayout>
