<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.devdroid.sleepassistant.activity.SettingsActivity"
    tools:showIn="@layout/activity_restriction">

    <LinearLayout
        android:id="@+id/ll_setting_data_export"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:text="@string/item_setting_data_export"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_setting_data_import"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:text="@string/item_setting_data_import"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_setting_about"
        style="@style/SettingItemLinearLayout"
        android:layout_marginTop="20dp">
        <TextView
            style="@style/SettingItem"
            android:text="@string/nav_string_about"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_setting_feedback"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:text="@string/nav_string_feedback"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_setting_logout"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:text="@string/item_setting_logput"/>
    </LinearLayout>
</LinearLayout>