<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@null"
            android:src="@drawable/zhuopin_logo" />
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:text="@string/app_name"
            android:textColor="@color/about_app_name"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/about_app_name"
            android:textSize="12sp" />
        <LinearLayout
            android:id="@+id/ll_app_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/about_rights"
                android:textColor="@color/about_text_sub_color"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_policy"
                android:textColor="@color/about_text_sub_color"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
