<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.devdroid.sleepassistant.activity.SettingsActivity"
    tools:showIn="@layout/activity_restriction"
    android:background="@color/app_main_background">
    <LinearLayout
        android:id="@+id/setting_feedback_menu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:background="#fefefe">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/setting_feedback_menu_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:textSize="14dp"
                android:text="@string/activity_setting_feedback_common"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical|right">
            <ImageView
                android:id="@+id/menu_imageview"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="12dp"
                android:src="@mipmap/arrow_07"/>
        </RelativeLayout>
    </LinearLayout>
    <EditText
        android:id="@+id/container_setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/setting_feedback_menu"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="top"
        android:hint="@string/container_hint_setting_feedback"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="15dp"
        android:textColor="#787878"
        android:textColorHint="#B5B5B5"
        android:textSize="16dp" />
    <TextView
        android:id="@+id/notice_setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_setting_feedback"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp"
        android:text="@string/notice_setting_feedback"
        android:textSize="12dp" />
</RelativeLayout>